# MAME4Mobile

./: .gitignore  LICENSE.md  README.md  makefile
android-eclipse/jni/: mame4droid-jni.c
android-studio/: import-summary.txt
android-studio/app/: build.gradle
android-studio/app/src/main/cpp/: CMakeLists.txt
android-studio/gradle/wrapper/: gradle-wrapper.properties
iOS/: Bootstrapper.m  EmulatorController.m  ScreenView.m  objc.mak
iOS-res/Applications/MAME4iOS.app/: Category.ini  config_iPhone.txt  config_iPhone_5.txt  help.html
prec-build/: file2str
src/emu/: devintrf.c  devintrf.h  drawgfx.c  driver.c  emu.mak  emualloc.h  emuopts.c  emuopts.h  fileio.h  hiscore.c  hiscore.h  inptport.c  input.c  inputseq.h  machine.c  machine.h  state.h  ui.c  uigfx.c  uimenu.c  uimenu.h  video.c
src/emu/debug/: debugcpu.c
src/emu/drivers/: empty.c
src/lib/: lib.mak
src/lib/util/: corestr.c
src/mame/: mame.mak  tiny.c  tiny.mak
src/mame/drivers/: artmagic.c  btoads.c  cave.c  coolpool.c  itech8.c  segaorun.c  segaxbd.c  skeetsht.c  taito_x.c  tickee.c  vcombat.c  xtheball.c
src/mame/includes/: cave.h  segas16.h
src/mame/machine/: n64.c  segaic16.c
src/mame/video/: artmagic.c  btoads.c  itech8.c  segaic16.c  segaic16.h
src/osd/droid-ios/: opensl_snd.c  osd-ios.c  osdmain.c
src/osd/osdmini/: minifile.c  minimisc.c  miniwork.c
src/osd/sdl/: sdl.mak
xcode/MAME4iOS/Gridlee/: Launch-Screen.storyboard
xcode/MAME4iOS/MAME4iOS/: LaunchScreen.storyboard  MAME4iOS-Info.plist
xcode/MAME4iOS/MAME4iOS.xcodeproj/: project.pbxproj
(+48 files in other folders)
